refactor: 회원가입 코드 개선